# voorkant-core

./: .clang-tidy  .gitignore  .gitmodules  IDEAS  LICENSE  Makefile  README.md  TODO  main.cpp  meson.build  meson.options
.github/workflows/: main-armel.yml  main-openwrt.yml  main.yml
docs/: domains.json  states.json
openwrt-package/: default-dot-config  libcurl-websockets.patch
openwrt-package/voorkant/: Makefile
scripts/: api-get.sh  background-ha.sh  bin2header.py  generate-domains.py  mdimap.py  proxy.sh  tmux.sh
scripts/build-targets/: Dockerfile.alpine-edge  Dockerfile.armel  Dockerfile.debian-experimental  Makefile  run
scripts/docker/: docker-compose.yaml  register.sh
scripts/docker/config/: configuration.yaml
scripts/header-generator/: domains.j2
src/: Backend.cpp  Backend.hpp  HAEntity.cpp  HAEntity.hpp  Observer.hpp  UIComponents.cpp  UIComponents.hpp  WSConn.cpp  WSConn.hpp  argparse.hpp  back-homeassistant.cpp  front-cli.cpp  front-ftxui.cpp  front-lvgl.cpp  front-lvgl.hpp  logger.cpp  logger.hpp  lv_conf.h  lv_drv_conf.h  magic_enum.hpp  magic_enum_all.hpp  magic_enum_containers.hpp  magic_enum_flags.hpp  magic_enum_format.hpp  magic_enum_fuse.hpp  magic_enum_iostream.hpp  magic_enum_switch.hpp  magic_enum_utility.hpp  main.cpp  main.hpp  mdimap.cpp  mdimap.hpp  test-lvgl.cpp  version.cpp.in
src/uicomponents/: UICamera.cpp  UICamera.hpp  UIComponents.cpp  UIComponents.hpp  UILogBox.cpp  UILogBox.hpp  mdimap.hpp  uiapexcard.cpp  uiapexcard.hpp  uirgblight.cpp  uirgblight.hpp
src/uicomponents/imgs/: brightness24.c  brightness24.cpp  colortemp24.c  colortemp24.cpp  colorwheel24.c  colorwheel24.cpp  readme.md  white24.c  white24.cpp
subprojects/: curl.wrap  ftxui.wrap  hinnant-date.wrap  libcurl.wrap
subprojects/packagefiles/FTXUI-4.0.0/: remove_examples.diff
subprojects/packagefiles/curl/: meson.build
subprojects/packagefiles/date/: 3.0.1-3.0.3.patch
subprojects/packagefiles/libcurl/: add_websocket.diff  add_websockets.patch
tmp/: lv_conf.h.diff  lv_drv_conf.h.diff
